# financial_advisor

./: README.md  main.py  pyproject.toml
notebooks/: EDA.ipynb
src/: data_processing.py  recommendations.py  visualization.py
