[tool.poetry]
name = "financial-advisor"
version = "0.1.0"
description = ""
authors = ["Regina0101 <ritodo1010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
